--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,13 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'commons-codec:commons-codec:1.11'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //implementation files('src/okio-2.1.0.jar')
 }
