--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+
+
+
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,6 +28,12 @@
         </activity>
         <activity android:name=".SuperviserListFiles.SuperviserListActivity"></activity>
         <activity android:name=".ReceptionFiles.Reception"></activity>
+        <activity android:name=".ReceptionFiles.CameraActivity">
+        </activity>
+        <activity android:name=".ReceptionFiles.Camera">
+        </activity>
+        <activity android:name=".ReceptionFiles.Etiketka">
+        </activity>
 
         <provider
             android:authorities="${applicationId}.provider"
@@ -33,6 +44,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths"/>
         </provider>
+
     </application>
 
 
