--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,14 +34,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SuperviserApp.ReceptionFiles.ExpedPage">
+
+        </activity>
 
         <activity android:name=".SuperviserApp.SuperviserListFiles.SuperviserListActivity"></activity>
         <activity android:name=".SuperviserApp.ReceptionFiles.Reception"></activity>
         <activity android:name=".SuperviserApp.ReceptionFiles.Camera">
         </activity>
         <activity android:name=".SuperviserApp.ReceptionFiles.Etiketka">
-        </activity>
-        <activity android:name=".ManagerListFiles.ManagerListActivity">
         </activity>
 
 
