add manager form

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         </activity>
         <activity android:name=".SuperviserApp.ReceptionFiles.Etiketka">
         </activity>
-        <activity android:name=".ManagerListFiles.ManagerListActivity">
+        <activity android:name=".ManagerApp.ManagerListFiles.ReceptionManagerActivity">
         </activity>
 
 
