New Reception for new orders
mangerreception is connected with adapter
Superviser uploading images is optimized and etc

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
         </activity>
         <activity android:name=".ManagerApp.ManagerListFiles.ReceptionManagerActivity">
         </activity>
+        <activity android:name=".ManagerApp.ManagerListFiles.NewReceptionManagerActivity">
+        </activity>
 
 
 
