--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,16 @@
         </activity>
         <activity android:name=".ManagerApp.ManagerListFiles.ReceptionManagerActivity">
         </activity>
+        <activity android:name=".ManagerApp.ManagerListFiles.NewReceptionManagerActivity">
+        </activity>
 
+        <activity android:name=".ManagerApp.ManagerListFiles.EditReceptionManagerActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
 
         <provider
