--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
         </activity>
         <activity android:name=".ManagerApp.ManagerListFiles.NewReceptionManagerActivity">
         </activity>
+        <activity android:name=".SuperviserApp.ReceptionFiles.ImageViewer">
+        </activity>
 
         <activity android:name=".ManagerApp.ManagerListFiles.EditReceptionManagerActivity">
             <intent-filter>
