--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,8 @@
         </activity>
         <activity android:name=".SuperviserApp.ReceptionFiles.ImageViewer">
         </activity>
+        <activity android:name=".SuperviserApp.WifiManagerService.WifiManagerClass">
+        </activity>
 
         <activity android:name=".ManagerApp.ManagerListFiles.EditReceptionManagerActivity">
             <intent-filter>
