--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,48 +25,44 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/auncher_icon_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppTheme">
 
-
-        >
-
-        <activity android:name=".System.loginFiles.SignInActivity">
+        <activity android:name=".System.loginFiles.SignInActivity"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ManagerApp.ManagerListFiles.ManagerListActivity">
-
-        </activity>
-        <activity android:name=".SuperviserApp.ReceptionFiles.ExpedPage">
-
-        </activity>
-
-        <activity android:name=".SuperviserApp.SuperviserListFiles.SuperviserListActivity"></activity>
-        <activity android:name=".SuperviserApp.ReceptionFiles.Reception"></activity>
-        <activity android:name=".SuperviserApp.ReceptionFiles.Camera">
-        </activity>
-        <activity android:name=".SuperviserApp.ReceptionFiles.Etiketka">
-        </activity>
-        <activity android:name=".ManagerApp.ManagerListFiles.ReceptionManagerActivity">
-        </activity>
-        <activity android:name=".ManagerApp.ManagerListFiles.NewReceptionManagerActivity">
-        </activity>
-        <activity android:name=".SuperviserApp.ReceptionFiles.ImageViewer">
-        </activity>
-        <activity android:name=".SuperviserApp.WifiManagerService.WifiManagerClass">
-        </activity>
-
-        <activity android:name=".ManagerApp.ManagerListFiles.EditReceptionManagerActivity">
+        <activity android:name=".ManagerApp.ManagerListFiles.ManagerListActivity"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".SuperviserApp.ReceptionFiles.ExpedPage"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".SuperviserApp.SuperviserListFiles.SuperviserListActivity"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".SuperviserApp.ReceptionFiles.Reception"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".SuperviserApp.ReceptionFiles.Camera"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".SuperviserApp.ReceptionFiles.Etiketka"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".ManagerApp.ManagerListFiles.ReceptionManagerActivity"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".ManagerApp.ManagerListFiles.NewReceptionManagerActivity"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".SuperviserApp.ReceptionFiles.ImageViewer"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".SuperviserApp.WifiManagerService.WifiManagerClass"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".ManagerApp.ManagerListFiles.EditReceptionManagerActivity"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
         <provider
             android:authorities="${applicationId}.provider"
@@ -86,9 +82,5 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths"/>
         </provider>
-
-
     </application>
-
-
 </manifest>
