--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
     <uses-feature android:name="android.hardware.camera" android:required="true"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-feature android:name="android.hardware.bluetooth" />
 
     <supports-screens
         android:normalScreens="true"
@@ -55,11 +58,10 @@
         <activity android:name=".SuperviserApp.WifiManagerService.WifiManagerClass"
             android:configChanges="orientation|screenSize"/>
         <activity android:name=".ManagerApp.ManagerListFiles.EditReceptionManagerActivity"
-            android:configChanges="orientation|screenSize">
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".SuperviserApp.BluetoothService.BluetoothMain"
+            android:configChanges="orientation|screenSize"/>
 
-
-
-        </activity>
 
         <provider
             android:authorities="${applicationId}.provider"
