--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
         <activity android:name=".ManagerApp.ManagerListFiles.EditReceptionManagerActivity"
             android:configChanges="orientation|screenSize"/>
       <activity android:name=".ManagerApp.ManagerListFiles.ImageViewerManager"
-            android:configChanges="orientation|screenSize">
+            android:configChanges="orientation|screenSize"/>
         <activity android:name=".SuperviserApp.BluetoothService.BluetoothMain"
             android:configChanges="orientation|screenSize"/>
 
