--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ManagerApp.ManagerListFiles.ListOtg"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ManagerApp.ManagerListFiles.ManagerListActivity"
             android:configChanges="orientation|screenSize" />
         <activity
