--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //implementation files('src/okio-2.1.0.jar')
     implementation files('src/main/jniLibs')
+    implementation 'com.itextpdf:itext-pdfa:5.5.10'
     implementation 'com.itextpdf:itextg:5.5.10'
+//    implementation 'com.itextpdf:itext7-core:7.0.2'
+//    implementation 'com.itextpdf:io:7.0.2'
+//    implementation 'com.itextpdf:kernel:7.0.2'
+//    implementation 'com.itextpdf:layout:7.0.2'
 }
