--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,9 @@ dependencies {
     implementation files('src/main/jniLibs')
     implementation 'com.itextpdf:itext-pdfa:5.5.10'
     implementation 'com.itextpdf:itextg:5.5.10'
-//    implementation 'com.itextpdf:itext7-core:7.0.2'
-//    implementation 'com.itextpdf:io:7.0.2'
-//    implementation 'com.itextpdf:kernel:7.0.2'
-//    implementation 'com.itextpdf:layout:7.0.2'
+
+    implementation 'com.itextpdf:itext7-core:7.1.6'
+    implementation 'com.itextpdf:io:7.1.6'
+    implementation 'com.itextpdf:kernel:7.1.6'
+    implementation 'com.itextpdf:layout:7.1.6'
 }
